--- a/pom.xml
+++ b/pom.xml
@@ -1,45 +1,24 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>io.packagecloud</groupId>
-  <artifactId>java-test-package</artifactId>
+  <groupId>io.test.app</groupId>
+  <artifactId>test-java-package</artifactId>
   <version>2.0.1</version>
   <packaging>jar</packaging>
 
-  <name>java-test-package</name>
-  <url>https://github.com/computology/java-test-package</url>
+  <name>test-java-package</name>
+  <url>https://github.com/prakarna/test-java-package.git</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
   <scm>
-    <connection>scm:git:ssh://github.com/computology/java-test-package.git</connection>
-    <developerConnection>scm:git:ssh://git@github.com/computology/java-test-package.git</developerConnection>
-    <url>https://github.com/computology/java-test-package</url>
+    <connection>scm:git:ssh://github.com/prakarna/test-java-package.git</connection>
+    <developerConnection>scm:git:ssh://git@github.com:prakarna/test-java-package.git</developerConnection>
+    <url>https://github.com/prakarna/test-java-package.git</url>
   </scm>
-
-  <build>
-    <extensions>
-      <extension>
-        <groupId>io.packagecloud.maven.wagon</groupId>
-        <artifactId>maven-packagecloud-wagon</artifactId>
-        <version>0.0.4</version>
-      </extension>
-    </extensions>
-  </build>
-
-  <distributionManagement>
-    <repository>
-      <id>packagecloud-travis</id>
-      <url>packagecloud+https://packagecloud.io/capotej/java-test-package</url>
-    </repository>
-    <snapshotRepository>
-      <id>packagecloud-travis</id>
-      <url>packagecloud+https://packagecloud.io/capotej/java-test-package</url>
-    </snapshotRepository>
-  </distributionManagement>
 
   <dependencies>
     <dependency>
