--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ cache:
   - "$HOME/.cache"
 deploy:
   provider: script
-  script: "cp .travis.settings.xml $HOME/.m2/settings.xml && mvn deploy"
+  script: "mvn deploy"
   skip_cleanup: true
   on:
     tags: true
@@ -13,6 +13,6 @@ deploy:
 notifications:
   email:
     recipients:
-    - julio@packagecloud.io
+    - papokk@gmail.com
     on_success: change
     on_failure: always
